<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamFactory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_team">Create Team</string>
    <string name="accept_event">Accept Event</string>
    <string name="create_teams">Create Teams</string>
    <string name="users">Users</string>
    <string name="teams">Teams</string>
    <string name="business">Business</string>
    <string name="school">School</string>
    <string name="sport">Sport</string>
    <string name="one">1</string>
    <string name="fourty">40</string>
    <string name="setp">Sept</string>

</resources>
